--- a/application/customOrder/view/index/index.html
+++ b/application/customOrder/view/index/index.html
@@ -4,43 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>订单管理</title>
-    <style>
-        body{
-	color: #333;
-	font: 16px Verdana, "Helvetica Neue", helvetica, Arial, 'Microsoft YaHei', sans-serif;
-	margin: 0px;
-	padding: 20px;
-}
-
-a{
-	color: #868686;
-	cursor: pointer;
-}
-a:hover{
-	text-decoration: underline;
-}
-h2{
-	color: #4288ce;
-	font-weight: 400;
-	padding: 6px 0;
-	margin: 6px 0 0;
-	font-size: 28px;
-	border-bottom: 1px solid #eee;
-}
-div{
-margin:8px;
-}
-.info{
-	padding: 12px 0;
-	border-bottom: 1px solid #eee;
-}
-
-.copyright{
-	margin-top: 24px;
-	padding: 12px 0;
-  border-top: 1px solid #eee;
-}
-</style>
     <!-- <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script> -->
     <script src="__ROOT__/static/js/jquery-3.3.1.js"></script>
     <script src="__ROOT__/static/layui/layui.js"></script>
@@ -66,7 +29,7 @@ margin:8px;
                     title: '创建新客户',
                     maxmin: true,
                     shadeClose: true, //点击遮罩关闭层
-                    area: ['480px', '100px'],
+                    area: ['480px', '500px'],
                     //禁用滚动条
                     content: ['../../public/customer/index/index', 'no']
                     //   content: '../../public/customOrder/Update_order/form?id='+id
@@ -84,14 +47,11 @@ margin:8px;
     </script>
     <script>
         var table = layui.table;
-
-
     </script>
     <script type="text/html" id="barDemo">
             <!-- <a class="layui-btn layui-btn-xs" lay-event="detail">查看</a> -->
             <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
-            <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
-            
+            <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>     
      </script>
     <script type="text/html" id="pdfexcel">
         <div>
@@ -108,45 +68,220 @@ margin:8px;
         </div>
 
  </script>
+    <!-- <script type="text/html" id="dateTpl">
+                        {{#  if(d.pState === 0){ }}
+                        <span data-pass = "passed">{{ d.joinTime }}</span>
+                        {{#  } else { }}
+                        {{ d.joinTime }}
+                        {{#  } }}
+                    </script>
+                    <script>
+                    table.render({
+                        elem: '#test'
+                        ,height: 'full'
+                        ,cols: [[
+                        { templet:'#dateTpl'}
+                        ]]
+                        ,done: function(res, curr, count){
+                                $('span[data-pass="passed"]').parent().parent().parent().css('color','#f30');
+                            }
+                    });
+                    </script> -->
     <script>
+        var LayUIDataTable = (function () {
+            var rowData = {};
+            var $;
+
+            function checkJquery() {
+                if (!$) {
+                    console.log("未获取jquery对象，请检查是否在调用ConvertDataTable方法之前调用SetJqueryObj进行设置！")
+                    return false;
+                } else return true;
+            }
+
+            /**
+             * 转换数据表格。
+             * @param callback 双击行的回调函数，该回调函数返回三个参数，分别为：当前点击行的索引值、当前点击单元格的值、当前行数据
+             * @returns {Array} 返回当前数据表当前页的所有行数据。数据结构：<br/>
+             * [
+             *      {字段名称1:{value:"当前字段值",cell:"当前字段所在单元格td对象",row:"当前字段所在行tr对象"}}
+             *     ,{字段名称2:{value:"",cell:"",row:""}}
+             * ]
+             * @constructor
+             */
+            function ConvertDataTable(callback) {
+                if (!checkJquery()) return;
+                var dataList = [];
+                var rowData = {};
+                var trArr = $(".layui-table-body.layui-table-main tr");// 行数据
+                if (!trArr || trArr.length == 0) {
+                    console.log("未获取到相关行数据，请检查数据表格是否渲染完毕！");
+                    return;
+                }
+                $.each(trArr, function (index, trObj) {
+                    var currentClickRowIndex;
+                    var currentClickCellValue;
+
+                    $(trObj).dblclick(function (e) {
+                        var returnData = {};
+                        var currentClickRow = $(e.currentTarget);
+                        currentClickRowIndex = currentClickRow.data("index");
+                        currentClickCellValue = e.target.innerHTML
+                        $.each(dataList[currentClickRowIndex], function (key, obj) {
+                            returnData[key] = obj.value;
+                        });
+                        callback(currentClickRowIndex, currentClickCellValue, returnData);
+                    });
+                    var tdArrObj = $(trObj).find('td');
+                    rowData = {};
+                    //  每行的单元格数据
+                    $.each(tdArrObj, function (index_1, tdObj) {
+                        var td_field = $(tdObj).data("field");
+                        rowData[td_field] = {};
+                        rowData[td_field]["value"] = $($(tdObj).html()).html();
+                        rowData[td_field]["cell"] = $(tdObj);
+                        rowData[td_field]["row"] = $(trObj);
+
+                    })
+                    dataList.push(rowData);
+                })
+                return dataList;
+            }
+
+            return {
+                /**
+                 * 设置JQuery对象，第一步操作。如果你没有在head标签里面引入jquery且未执行该方法的话，ParseDataTable方法、HideField方法会无法执行，出现找不到 $ 的错误。如果你是使用LayUI内置的Jquery，可以
+                 * var $ = layui.jquery   然后把 $ 传入该方法
+                 * @param jqueryObj
+                 * @constructor
+                 */
+                SetJqueryObj: function (jqueryObj) {
+                    $ = jqueryObj;
+                }
+
+                /**
+                 * 转换数据表格
+                 */
+                , ParseDataTable: ConvertDataTable
+
+                /**
+                 * 隐藏字段
+                 * @param fieldName 要隐藏的字段名（field名称）参数可为字符串（隐藏单列）或者数组（隐藏多列）
+                 * @constructor
+                 */
+                , HideField: function (fieldName) {
+                    if (!checkJquery()) return;
+                    if (fieldName instanceof Array) {
+                        $.each(fieldName, function (index, field) {
+                            $("[data-field='" + field + "']").css('display', 'none');
+                        })
+                    } else if (typeof fieldName === 'string') {
+                        $("[data-field='" + fieldName + "']").css('display', 'none');
+                    } else {
+
+                    }
+                }
+            }
+        })();
+    </script>
+    <script>
+
         layui.use('table', function () {
             var table = layui.table;
-
+            var layer = layui.layer;
+            var $ = layui.jquery;
             //第一个实例
             table.render({
                 elem: '#test'
                 , title: "订单表"
                 , height: 600
-                , width: 1250
+                , width: 1300
                 , defaultToolbar: ['filter', 'print']
-                , url: '../../public/customOrder/index/json' //数据接口
+                , url: '__ROOT__//customOrder/index/json' //数据接口
                 , page: true //开启分页
                 , toolbar: '#pdfexcel' //开启工具栏，此处显示默认图标，可以自定义模板，详见文档
                 , totalRow: true //开启合计行
                 , cols: [[ //表头
-                    { field: 'order_num', title: '编号', type: 'numbers', width: 60, sort: true, fixed: 'left' }
-                    , { field: 'order_num', title: '订单编号', id: 'orderNum', width: 142, sort: true, fixed: 'left', sort: true }
+                    { field: 'num', title: '编号', type: 'numbers', width: 60, sort: true }
+                    , { field: 'order_num', title: '订单编号', width: 142, sort: true }
                     , { field: 'custom_num', title: '顾客编号', width: 120, sort: true }
                     , { field: 'product_name', title: '产品名称', width: 142 }
                     , { field: 'amount', title: '数量', width: 80, sort: true }
                     , { field: 'unit_price', title: '单价', width: 80, sort: true }
                     , {
-                        field: 'title', title: '总价', width: 100, sort: true
+                        field: 'total_price', title: '总价', width: 100, sort: true
                         , templet: function (d) {
-                            return d.amount * d.unit_price + '￥';
+                            return d.amount * d.unit_price;
                         }
                     }, { field: 'saler_num', title: '销售员编号', width: 110, sort: true }
                     , { field: 'order_time', title: '创建时间', width: 150, sort: true }
                     , { field: 'order_channel', title: '渠道', width: 110 }
                     , { fixed: 'right', width: 120, toolbar: '#barDemo' } //这里的toolbar值是模板元素的选择器
 
-                ]]
+                ]],
+                done: function (res, curr, count) {
+                    $(".layui-table th").css("font-weight", "bold");// 设定表格标题字体加粗
 
+                    LayUIDataTable.SetJqueryObj($);// 第一步：设置jQuery对象
+                    //LayUIDataTable.HideField('num');// 隐藏列-单列模式
+                    //LayUIDataTable.HideField(['num','match_guest']);// 隐藏列-多列模式
+                    _cur_page = curr;//获取当前页
+                    var currentRowDataList = LayUIDataTable.ParseDataTable(function (logindex, logcurrentData, logrowData) {
+                        console.log("当前页数据条数:" + currentRowDataList.length)
+                        console.log("当前行索引：" + logindex);
+                        console.log("触发的当前行单元格：" + logcurrentData);
+                        console.log("当前行数据：" + JSON.stringify(logrowData));
 
-
+                        var msg = '<div style="text-align: left"> 【当前页数据条数】' + currentRowDataList.length + '<br/>【当前行索引】' + logindex + '<br/>【触发的当前行单元格】' + logcurrentData + '<br/>【当前行数据】' + JSON.stringify(logrowData) + '</div>';
+                        layer.msg(msg)
+                    })
+                }
             });
             // //执行表格“尺寸结构”的重置，一般写在对应的事件中
             // table.resize('test');
+
+            //监听排序事件 
+            table.on('sort(jsontable)', function (sortobj) { //注：tool是工具条事件名，test是table原始容器的属性 lay-filter="对应的值"
+                // console.log(sortobj.field); //当前排序的字段名
+                // console.log(sortobj.type); //当前排序类型：desc（降序）、asc（升序）、null（空对象，默认排序）
+                // console.log(this); //当前排序的 th 对象
+                var fiele = sortobj.field;
+                LayUIDataTable.SetJqueryObj($);// 第一步：设置jQuery对象
+
+                var currentRowDataList = LayUIDataTable.ParseDataTable(function (index, currentData, rowData) {
+                    console.log("当前页数据条数:" + currentRowDataList.length)
+                    console.log("当前行索引：" + index);
+                    console.log("触发的当前行单元格：" + currentData);
+                    console.log("当前行数据：" + JSON.stringify(rowData));
+
+                    var msg = '<div style="text-align: left"> 【当前页数据条数】' + currentRowDataList.length + '<br/>【当前行索引】' + index + '<br/>【触发的当前行单元格】' + currentData + '<br/>【当前行数据】' + JSON.stringify(rowData) + '</div>';
+                    layer.msg(msg);
+                })
+
+                // 对相关数据进行判断处理
+                $.each(currentRowDataList, function (index, obj) {
+                    console.log(_cur_page);//当前页
+
+                    if (sortobj.field == 'total_price' && sortobj.type == 'desc' && _cur_page == 1) {
+                        if (obj['total_price'].value >= 30) {
+                            obj['total_price'].row.css("background-color", "#FAB000");
+                        }
+                    }
+
+                })
+
+                //尽管我们的 table 自带排序功能，但并没有请求服务端。
+                //有些时候，你可能需要根据当前排序的字段，重新向服务端发送请求，从而实现服务端排序，如：
+                // table.reload('idTest', {
+                //     initSort: obj //记录初始排序，如果不设的话，将无法标记表头的排序状态。
+                //     , where: { //请求参数（注意：这里面的参数可任意定义，并非下面固定的格式）
+                //         field: obj.field //排序字段
+                //         , order: obj.type //排序方式
+                //     }
+                // });
+
+                // layer.msg('服务端排序。order by ' + obj.field + ' ' + obj.type);
+            });
 
 
 
@@ -170,7 +305,7 @@ margin:8px;
                     shadeClose: true, //点击遮罩关闭层
                     area: ['480px', '500px'],
                     //禁用滚动条
-                    content: ['../../public/customer/index/index', 'no']
+                    content: ['__ROOT__/customer/index/index', 'no']
                     //   content: '../../public/customOrder/Update_order/form?id='+id
                 });
             });
@@ -198,8 +333,8 @@ margin:8px;
                         maxmin: true,
                         shadeClose: true, //点击遮罩关闭层
                         area: ['900px', '400px'],
-                        //   content: ['../../public/customOrder/Update_order/form?id='+id,'no']
-                        content: '../../public/customOrder/Update_order/form?id=' + id
+                        //   content: ['__ROOT__/customOrder/Update_order/form?id='+id,'no']
+                        content: '__ROOT__/customOrder/Update_order/form?id=' + id
                     });
 
                     //同步更新缓存对应的值
@@ -211,6 +346,7 @@ margin:8px;
                 }
             });
         });
+
     </script>
 
 </head>
