--- a/application/product/view/productdetails/productdetails.html
+++ b/application/product/view/productdetails/productdetails.html
@@ -39,7 +39,7 @@
                         {/volist} 
                         </tbody>
                     </table>
-                    <button><a href="../../Product/product/product.html?department_id={$pro.productdevelop_id}">BACK</a></button>
+                    <button><a href="../../Product/product/product.html?productdevelop_id={$pro.productdevelop_id}&department_id={$pro.productmaster_id}">BACK</a></button>
             </div>
         </div>
     </div>
