--- a/application/chart/view/chart/charta.html
+++ b/application/chart/view/chart/charta.html
@@ -64,12 +64,12 @@
 
         <div class="row" style="background-color: transparent;box-shadow:0px 0px 8px 5px #ccc;">
             
-            <div class="offset-md-1 col-md-4">
+            <div class="offset-md-1 col-md-5">
                 <div class="demo-section k-content wide">
                     <div id="pie1"></div>
                 </div>
             </div>
-            <div class="offset-md-2 col-md-4">
+            <div class=" col-md-5">
                 <div class="demo-section k-content wide">
                     <div id="pie2"></div>
                 </div>
